# robot-framework-learnings

./: .gitignore  pyproject.toml
assets/: form.html
exercises/: form-access.robot  keyword-should-element-check.robot  keyword-should-page-title.robot  keyword-should-text-check.robot  keyword-should.robot  model-suite.robot  variables.robot
