[tool.poetry]
name = "robot-framework-learnings"
version = "0.1.0"
description = ""
authors = ["Agnes <agnes.leoterio.alves@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
robotframework-seleniumlibrary = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
